--- a/MvcCv/Views/Admin/AdminEkle.cshtml
+++ b/MvcCv/Views/Admin/AdminEkle.cshtml
@@ -7,10 +7,10 @@
 <br />
 <h2>Yeni Kullanıcı Ekleme Sayfası</h2>
 <form method="post">
-    <input type="text" name="KullaniciAdi" class="form-control"
+    <input type="text" name="KullaniciAdi" required class="form-control"
            placeholder="Kullanıcı Adı" />
     <br />
-    <input type="text" name="Sifre" class="form-control"
+    <input type="text" name="Sifre" required class="form-control"
            placeholder="Şifreniz" />
     <br />
     <button class="btn btn-info">Kaydet</button>
