--- a/MvcCv/Views/Deneyim/DeneyimEkle.cshtml
+++ b/MvcCv/Views/Deneyim/DeneyimEkle.cshtml
@@ -6,13 +6,13 @@
 <br />
 <h2>Yeni Deneyim Ekleme Sayfası</h2>
 <form method="post">
-    <input type="text" name="Baslik" class="form-control"
+    <input type="text" name="Baslik" required class="form-control"
            placeholder="Başlığı yazınız" />
     <br />
-    <input type="text" name="AltBaslik" class="form-control"
+    <input type="text" name= "AltBaslik" required class="form-control"
            placeholder="Alt Başlık" />
     <br />
-    <input type="text" name="Tarih" class="form-control"
+    <input type="text" name="Tarih" required class="form-control"
            placeholder="Çalışma Tarihi" />
     <br />
     <textarea placeholder="Açıklama giriniz" name="Aciklama" 
