--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Project Add</title>
+    <title>Can Balcı Cv</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,7 +29,7 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="/Default/Index/" class="brand-link">
-                <img src="/AdminLTE-3.0.4/dist/img/AdminLTELogo.png"
+                <img src="~/AdminLTE-3.0.4/dist/img/gowebside.jpg"
                      alt="AdminLTE Logo"
                      class="brand-image img-circle elevation-3"
                      style="opacity: .8">
@@ -41,7 +41,7 @@
                 <!-- Sidebar user (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="/AdminLTE-3.0.4/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                        <img src="~/AdminLTE-3.0.4/dist/img/2.png" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
                         <a href="#" class="d-block">Admin Paneli</a>
@@ -55,7 +55,9 @@
     with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview">
                             <a href="/Hakkimda/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                @*<i class="fa fa-user" aria-hidden="true"></i>*@
+                                <i class="fa fa-address-card" aria-hidden="true"></i>
+                                @*<i class="nav-icon fas fa-tachometer-alt"></i>*@
                                 <p>
                                     Hakkımda
                                 </p>
@@ -63,7 +65,8 @@
                         </li>
                         <li class="nav-item">
                             <a href="/Egitim/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-th"></i>
+                                <i class="fa fa-university" aria-hidden="true"></i>
+                                @*<i class="nav-icon fas fa-th"></i>*@
                                 <p>
                                     Eğitimlerim
                                 </p>
@@ -71,7 +74,8 @@
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="/Deneyim/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-copy"></i>
+                                <i class="fa fa-check-square" aria-hidden="true"></i>
+                                @*<i class="nav-icon fas fa-copy"></i>*@
                                 <p>
                                     Deneyimlerim
                                 </p>
@@ -79,7 +83,8 @@
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="/Hobi/Index" class="nav-link">
-                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <i class="fa fa-gamepad" aria-hidden="true"></i>
+                                @*<i class="nav-icon fas fa-chart-pie"></i>*@
                                 <p>
                                     Hobilerim
                                 </p>
@@ -87,7 +92,8 @@
                         </li>
                         <li class="nav-item">
                             <a href="/Yetenek/Index/" class="nav-link">
-                                <i class="nav-icon far fa-calendar-alt"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                @*<i class="nav-icon far fa-calendar-alt"></i>*@
                                 <p>
                                     Yeteneklerim
                                 </p>
@@ -95,7 +101,8 @@
                         </li>
                         <li class="nav-item">
                             <a href="/Sertifika/Index/" class="nav-link">
-                                <i class="nav-icon far fa-image"></i>
+                                <i class="fa fa-trophy" aria-hidden="true"></i>
+                                @*<i class="nav-icon far fa-image"></i>*@
                                 <p>
                                     Sertifikalarım
                                 </p>
@@ -103,7 +110,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="/iletisim/Index/" class="nav-link">
-                                <i class="nav-icon far fa-image"></i>
+                                <i class="fa fa-info-circle" aria-hidden="true"></i>
                                 <p>
                                     İletişim
                                 </p>
@@ -111,15 +118,19 @@
                         </li>
                         <li class="nav-item">
                             <a href="/SosyalMedya/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-code"></i>
+                                <i class="fas fa-thumbs-up"></i>
+                                @*<i class="fa fa-share-square" aria-hidden="true"></i>*@
+                                @*<i class="nav-icon fas fa-code"></i>*@
                                 <p>
-                                    Sosyal Medya
+                                     Sosyal Medya
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/Admin/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-pen"></i>
+                                <i class="fa fa-cog" aria-hidden="true"></i>
+                                @*<i class="fa fa-plug" aria-hidden="true"></i>*@
+                                @*<i class="nav-icon fas fa-pen"></i>*@
                                 <p>
                                     Ayarlar
                                 </p>
@@ -127,7 +138,9 @@
                         </li>
                         <li class="nav-item">
                             <a href="/Login/LogOut/" class="nav-link">
-                                <i class="nav-icon fas fa-sign"></i>
+                                <i class="fa fa-power-off" aria-hidden="true"></i>
+                                @*<i class="fa fa-sign-out" aria-hidden="true"></i>*@
+                                @*<i class="nav-icon fas fa-sign-out"></i>*@
                                 <p>
                                     Çıkış
                                 </p>
