--- a/MvcCv/Views/Default/Index.cshtml
+++ b/MvcCv/Views/Default/Index.cshtml
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Resume - Start Bootstrap Theme</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <title>Can Balcı Cv</title>
+    <link rel="icon" type="image/svg" href="~/AdminLTE-3.0.4/dist/img/iconcv.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -28,7 +28,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Clarence Taylor</span>
+            <span class="d-block d-lg-none">Can Balcı</span>
             @foreach (var item in Model)
             {
 
@@ -45,6 +45,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">HOBİLERİM</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">SERTİFİKALARIM</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">İLETİŞİM</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/Login">GİRİŞ YAP</a></li>
+
 
             </ul>
         </div>
@@ -66,7 +68,7 @@
                     <div class="subheading mb-5">
                         @x.Adres / @x.Telefon /
 
-                        <a href="@x.Mail">@x.Mail </a>
+                        <p><a href="mailto:@x.Mail">@x.Mail</a></p>
                     </div>
                     <p class="lead mb-5">@x.Aciklama</p>
                     @Html.Action("SosyalMedya")
@@ -106,6 +108,8 @@
         <section class="resume-section" id="contact">
             @Html.Action("Iletisim")
         </section>
+        <hr class="m-0" />
+        
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
