--- a/MvcCv/Views/Egitim/EgitimEkle.cshtml
+++ b/MvcCv/Views/Egitim/EgitimEkle.cshtml
@@ -10,7 +10,7 @@
 <form method="post">
     @Html.Label("Başlık")
     @Html.TextBoxFor(x => x.Baslik, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.Baslik, "", new { @style = "color:red" })
+    @Html.ValidationMessageFor(x => x.Baslik, "Bu alanı boş geçemezsiniz", new { @style = "color:red" })
     <br />
     @Html.Label("Alt Başlık")
     @Html.TextBoxFor(x => x.AltBaslik, new { @class = "form-control" })
@@ -23,7 +23,7 @@
     <br />
     @Html.Label("GNO")
     @Html.TextBoxFor(x => x.GNO, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.GNO, "", new { @style = "color:red" })
+    @Html.ValidationMessageFor(x => x.GNO, "Bu alanı boş geçemezsiniz", new { @style = "color:red" })
 
     <br />
     <button class="btn btn-info">Kaydet</button>
