--- a/MvcCv/Views/Login/Index.cshtml
+++ b/MvcCv/Views/Login/Index.cshtml
@@ -6,9 +6,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Login 10</title>
+    <title>Login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/svg" href="~/AdminLTE-3.0.4/dist/img/iconcv.png" />
+
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
