--- a/MvcCv/Views/Yetenek/YeniYetenek.cshtml
+++ b/MvcCv/Views/Yetenek/YeniYetenek.cshtml
@@ -12,9 +12,13 @@
 <form method="post">
     @Html.Label("Yetenek Açıklaması")
     @Html.TextBoxFor(x => x.Yetenek, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.Yetenek, "Bu alanı boş geçemezsiniz", new { @style = "color:red" })
+
     <br />
     @Html.Label("Derece")
     @Html.TextBoxFor(x => x.Oran, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.Oran, "Bu alanı boş geçemezsiniz", new { @style = "color:red" })
+
     <br />
     <button class="btn btn-info">Kaydet</button>
 
